# lumenwatch-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.ps1
app/: __init__.py  config.py  database.py  demo_data.py  diff_engine.py  main.py  mcp_server.py  models.py  probes.py  scheduler.py  schemas.py  service.py
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_diff_engine.py  test_health.py  test_scheduler.py
