[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "lumenwatch-agent"
version = "0.2.0"
description = "Website change intelligence with FastAPI, browser automation and MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Roman Kabanov" }]
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp>=1.27,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
browser = ["playwright>=1.50,<2"]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
